[metadata]
name = chancetoroll
version = 0.0.1
description = A dice probability app
author = Aaron Sykes
author-email = aaron@aaronsykes.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages = chancetoroll

[test]
test-suite = tests

[pep8]
ignore = E701
max-line-length = 88
